<resources>
    <!-- App name -->
    <string name="app_name">Power of Brain</string>

    <!-- Type Games -->
    <string name="math">Math</string>
    <string name="action">Action</string>
    <string name="vision">Vision</string>
    <string name="memory">Memory</string>
    <string name="patience">Patience</string>
    <string name="time">Time</string>

    <!-- Global -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="ads">ads</string>
    <string name="zero">0</string>
    <string name="descriptionMath">Which One Is Greater?</string>
    <string name="expression1">expression1</string>
    <string name="expression2">expression2</string>
    <string name="best_score">Best Score</string>
    <string name="number">number</string>
    <string name="score">Score</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="descriptionMamory">Tap on black tiles!!</string>
    <string name="_10">10</string>
    <string name="sort_right">Sort Right!</string>
    <string name="descriptionVision">Remeber and Rebuild Lineups!</string>
    <string name="_3">3</string>
    <string name="_0_0">0.0</string>
    <string name="descriptionPatience">Catch the circle!</string>
    <string name="speed">Speed</string>
    <string name="descriptionSpeed">Click on the green tile continuously!</string>
    <string name="by_fbf">FROM FBF</string>
    <string name="play_text">PLAY</string>
    <string name="settings">Settings</string>
    <string name="volume_status_on">Volume status: ON</string>
    <string name="volume_status_off">Volume status: OFF</string>
    <string name="ads_status_on">Ads status: ON</string>
    <string name="ads_status_off">Ads status: OFF</string>
    <string name="math_game">Math Game</string>
    <string name="the_best_score">The Best Score:</string>
    <string name="speed_game">Speed Game</string>
    <string name="patience_game">Patience Game</string>
    <string name="action_game">Action Game</string>
    <string name="vision_game">Vision Game</string>
    <string name="memory_game">Memory Game</string>
</resources>