<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.math.fragment.MathFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backImageButton"
            style="@style/MainView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:src="@drawable/back"
            android:tint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/lineMathView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2dp"
        android:background="@color/red_dark1"
        app:layout_constraintTop_toBottomOf="@+id/gameBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeTextView"
        style="@style/WhiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sp"
        app:layout_constraintBottom_toBottomOf="@+id/timerImageView"
        app:layout_constraintEnd_toEndOf="@+id/timerImageView"
        app:layout_constraintStart_toStartOf="@+id/timerImageView"
        app:layout_constraintTop_toTopOf="@+id/timerImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descriptionTextView"
        style="@style/WhiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/descriptionMath"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/expression1TextView"
        style="@style/MathView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_128dp"
        android:layout_marginHorizontal="@dimen/_64dp"
        android:gravity="center"
        android:text="@string/expression1"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/expression2TextView"
        style="@style/MathView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_128dp"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center"
        android:text="@string/expression2"
        android:textSize="@dimen/_30sp"
        app:layout_constraintEnd_toEndOf="@+id/expression1TextView"
        app:layout_constraintStart_toStartOf="@+id/expression1TextView"
        app:layout_constraintTop_toBottomOf="@+id/expression1TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoreTextView"
        style="@style/WhiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64dp"
        android:text="@string/_0"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineMathView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/timerImageView"
        android:layout_width="@dimen/_75dp"
        android:layout_height="@dimen/_75dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/timer_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/winLottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_80dp"
        android:layout_marginTop="@dimen/_128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerImageView"
        app:lottie_rawRes="@raw/complete_math_animation" />
</androidx.constraintlayout.widget.ConstraintLayout>