<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.lose.fragment.LoseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heartsConstraintLayout"
        style="@style/MainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heartsTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/heartImageView"
            app:layout_constraintEnd_toStartOf="@+id/heartImageView"
            app:layout_constraintStart_toEndOf="@+id/plusImageView"
            app:layout_constraintTop_toTopOf="@+id/heartImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heartImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heartsTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/plusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/heartsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoresConstraintLayout"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartsConstraintLayout"
        app:layout_constraintVertical_bias="0.39">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bestScoreTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/best_score"
            android:textSize="@dimen/_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bestScoreNumberTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/number"
            android:textSize="@dimen/_30sp"
            app:layout_constraintBottom_toTopOf="@+id/scoreTextView"
            app:layout_constraintEnd_toEndOf="@+id/bestScoreTextView"
            app:layout_constraintStart_toStartOf="@+id/bestScoreTextView"
            app:layout_constraintTop_toBottomOf="@id/bestScoreTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scoreTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32dp"
            android:text="@string/score"
            android:textSize="@dimen/_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestScoreNumberTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scoreNumberTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/number"
            android:textSize="@dimen/_30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/scoreTextView"
            app:layout_constraintStart_toStartOf="@+id/scoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/homeImageView"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@+id/restartImageView"
        app:layout_constraintEnd_toStartOf="@id/restartImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restartImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restartImageView"
        style="@style/MainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4dp"
        android:layout_marginTop="@dimen/_16dp"
        android:src="@drawable/restart"
        app:layout_constraintEnd_toStartOf="@+id/adsTextView"
        app:layout_constraintStart_toEndOf="@+id/homeImageView"
        app:layout_constraintTop_toBottomOf="@+id/scoresConstraintLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/adsTextView"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_32dp"
        android:gravity="center"
        android:text="@string/ads"
        android:textAllCaps="true"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restartImageView"
        app:layout_constraintTop_toTopOf="@+id/homeImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>