<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.play.fragment.PlayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mathConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_32dp"
        android:layout_marginTop="@dimen/_70dp"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@+id/speedConstraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/actionConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImageButton">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mathImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/math"
            app:layout_constraintBottom_toTopOf="@id/mathTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mathTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/math"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/mathImageView"
            app:layout_constraintStart_toStartOf="@id/mathImageView"
            app:layout_constraintTop_toBottomOf="@+id/mathImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_32dp"
        app:layout_constraintBottom_toBottomOf="@+id/mathConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mathConstraintLayout"
        app:layout_constraintTop_toTopOf="@+id/mathConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/actionImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/action"
            app:layout_constraintBottom_toTopOf="@id/actionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actionTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/actionImageView"
            app:layout_constraintStart_toStartOf="@id/actionImageView"
            app:layout_constraintTop_toBottomOf="@+id/actionImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/visionConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/speedConstraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/actionConstraintLayout"
        app:layout_constraintStart_toStartOf="@+id/actionConstraintLayout"
        app:layout_constraintTop_toTopOf="@+id/speedConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/visionImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/vision"
            app:layout_constraintBottom_toTopOf="@id/visionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/visionTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/vision"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/visionImageView"
            app:layout_constraintStart_toStartOf="@+id/visionImageView"
            app:layout_constraintTop_toBottomOf="@+id/visionImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/memoryConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/patienceConstraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/visionConstraintLayout"
        app:layout_constraintStart_toStartOf="@+id/visionConstraintLayout"
        app:layout_constraintTop_toTopOf="@+id/patienceConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/memoryImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/memory"
            app:layout_constraintBottom_toTopOf="@id/memoryTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memoryTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/memory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/memoryImageView"
            app:layout_constraintStart_toStartOf="@+id/memoryImageView"
            app:layout_constraintTop_toBottomOf="@+id/memoryImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/patienceConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/speedConstraintLayout"
        app:layout_constraintStart_toStartOf="@+id/speedConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/speedConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/patienceImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/patience"
            app:layout_constraintBottom_toTopOf="@id/patienceTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/patienceTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/patience"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/patienceImageView"
            app:layout_constraintStart_toStartOf="@+id/patienceImageView"
            app:layout_constraintTop_toBottomOf="@+id/patienceImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/speedConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@id/patienceConstraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/mathConstraintLayout"
        app:layout_constraintStart_toStartOf="@+id/mathConstraintLayout"
        app:layout_constraintTop_toBottomOf="@id/mathConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/speedImageView"
            style="@style/MainView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/speed"
            app:layout_constraintBottom_toTopOf="@id/speedTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/speedTextView"
            style="@style/BlackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:text="@string/speed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/speedImageView"
            app:layout_constraintStart_toStartOf="@+id/speedImageView"
            app:layout_constraintTop_toBottomOf="@+id/speedImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backImageButton"
        style="@style/MainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>