<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.home.fragment.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/homeLottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_4dp"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartsConstraintLayout"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/home_animation"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playButton"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_64dp"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@id/settingsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLottieAnimationView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settingsImageView"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_128dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ewardImageView"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ewardImageView"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:src="@drawable/award"
        app:layout_constraintBottom_toBottomOf="@+id/settingsImageView"
        app:layout_constraintEnd_toStartOf="@+id/adsButton"
        app:layout_constraintStart_toEndOf="@+id/settingsImageView"
        app:layout_constraintTop_toTopOf="@+id/settingsImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/adsButton"
        style="@style/MainView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16dp"
        android:gravity="center"
        android:text="@string/ads"
        android:textAllCaps="true"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ewardImageView"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/ewardImageView"
        app:layout_constraintTop_toTopOf="@+id/ewardImageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heartsConstraintLayout"
        style="@style/MainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heartsTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/heartImageView"
            app:layout_constraintEnd_toStartOf="@+id/heartImageView"
            app:layout_constraintStart_toEndOf="@+id/plusImageView"
            app:layout_constraintTop_toTopOf="@+id/heartImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heartImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heartsTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/plusImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/heartsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>